--- a/app/views/foods/edit.html.erb
+++ b/app/views/foods/edit.html.erb
@@ -1,10 +1,30 @@
-<h1>Editing food</h1>
+<h1>Edit food</h1>
 
-<%= render "form", food: @food %>
+<div class="container">
+<%= form_for @current_food do |f| %>
 
-<br>
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+  </div>
 
-<div>
-  <%= link_to "Show this food", @food %> |
-  <%= link_to "Back to foods", foods_path %>
+  <div class="field">
+    <%= f.label :measurement_unit %><br />
+    <%= f.text_field :measurement_unit, autofocus: true %>
+  </div>
+
+    <div class="field">
+    <%= f.label :quantity %><br />
+    <%= f.number_field :quantity, autofocus: true %>
+  </div>
+
+    <div class="field">
+    <%= f.label :price %><br />
+    <%= f.text_field :price, autofocus: true %>
+  </div>
+  <div class="actions">
+    <%= f.submit "Save" %>
+  </div>
+<% end %>
 </div>
+
