--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -1,10 +1,11 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @food %>
+<%
+=begin%>
+ <%= render @food %> 
+<%
+=end%>
 
 <div>
-  <%= link_to "Edit this food", edit_food_path(@food) %> |
-  <%= link_to "Back to foods", foods_path %>
-
-  <%= button_to "Destroy this food", @food, method: :delete %>
+  <%= button_to "Destroy this food", food_path, method: :delete %>
 </div>
