Fix recipe error

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -6,22 +6,24 @@
       <p class="">No recipes available! </p>
     <% else %>
       <% @recipes.each do |recipe| %>
-        <div class="">
-          <div>
+        <div class="a">
+          <div class="one">
             <%= recipe.name %>
             <% if can? :delete, recipe %>
               <%= button_to "Destroy this recipe", recipe, method: :delete %>
             <% end %>
+            <p>
+            <%= link_to "Show", recipe %>
+          </p>
             </div>
+            
           <div>
             <p><%= recipe.description %></p>
           </div>
-          <p>
-            <%= link_to "View Recipe", recipe %>
-          </p>
-        <div>
+          
+    </div>
       <% end %>
-    <% end %>
+  <% end %>
   </div>
   <%= link_to "Add Recipe", new_recipe_path %>
 </div>
