--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -185,6 +185,18 @@ button:hover {
     background-color: orangered;
 }
 
+.one {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.a {
+  border: 2px solid;
+  margin: 30px 0;
+  display: flex;
+  padding: 10px;
+}
+
 /* CSS for responsive layout */
 @media (max-width: 767px) {
   .grid-container {
