Toggle button work

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,9 @@
    <nav>
     <ul>
       <li><%= link_to "Food", foods_path %></li>
-      <li><a href="#">Recipe</a></li>
-      <li><a href="#">Public Recipe</a></li>
+      <li><a href="recipes">Recipe</a></li>
+      <li><a href="public_recipes">Public Recipe</a></li>
+      <li><a href="general_shopping_list">Shopping List</a></li>
     </ul>
   </nav>
   <p class="notice"><%= notice %></p>
