--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -190,11 +190,17 @@ button:hover {
   flex-direction: column;
   gap: 32px;
 }
+
 .a {
   border: 2px solid;
   margin: 30px 0;
   display: flex;
   padding: 10px;
+}
+
+.a p {
+  font-weight: 600;
+  font-size: 1.4rem;
 }
 
 .recipe-details {
