--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -27,12 +27,9 @@
     <%= form.label :Description %><br />
     <%= form.text_area :description, placeholder: "Enter recipe description" %>
   </div>
-  <div class="field">
-    <%= form.label :Public %><br />
-    <%= form.label :public, "YES", value: "true"  %>
-    <%= form.radio_button :public, true, checked: true %>
-    <%= form.label :public, "NO", value: "false" %>
-    <%= form.radio_button :public, false %>
+   <div class="field">
+    <%= form.label :public %>
+    <%= form.check_box :public %>
   </div>
   <div>
     <%= form.submit %>
