--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,9 +12,10 @@
  *
  *= require_tree .
  *= require_self
- 
+
  /* Global styles */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&display=swap");
+
 :root {
   height: 100%;
   width: 100%;
@@ -37,9 +38,12 @@ ul {
   padding: 0;
 }
 
-li {
-  display: inline-block;
-  margin-right: 10px;
+a {
+  text-decoration: none;
+  color: black;
+  width: fit-content;
+  background-color: #dedede;
+  padding: 0.3rem;
 }
 
 li > a {
@@ -54,19 +58,18 @@ a:hover {
   color: #fff;
 }
 
+li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
 
-a {
-  text-decoration: none;
-  color: black;
-  width: fit-content;
-  background-color: #dedede;
-  padding: 0.3rem;
-}
+
 
 /* Sign up form */
 
@@ -82,6 +85,7 @@ a {
   align-items: center;
   gap: 10px;
 }
+
 form {
   /* width: 100%; */
   margin: 1rem auto;
@@ -145,7 +149,7 @@ button:hover {
 }
 
 .grid-item {
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 10px;
   text-align: center;
 }
@@ -178,6 +182,7 @@ button:hover {
   padding: 0;
   height: 2rem;
   margin: 0;
+
   /* display: block; */
 }
 
@@ -232,9 +237,11 @@ button:hover {
 
 .button_to {
   /* margin: 0; */
+
   /* width: 100%; */
   padding: 0;
 }
+
 .button_action button {
   display: block;
 }
@@ -248,7 +255,7 @@ button:hover {
 }
 
 .grid-item2 {
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 10px;
   text-align: center;
 }
@@ -262,7 +269,7 @@ button:hover {
 }
 
 .grid-item3 {
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 10px;
   text-align: center;
 }
@@ -273,7 +280,7 @@ button:hover {
 
 .shopping_list_text {
   text-align: center;
-} 
+}
 
 .things_to_buy {
   display: flex;
@@ -290,17 +297,16 @@ button:hover {
   margin-left: 10rem;
 }
 
-.field {
-  margin-left: 2rem;
-  margin-bottom: 1rem;
-}
-
 .field_action {
   margin-left: 2rem;
   width: 30%;
 }
 
-.container {
+.recipe-header {
+  margin-left: 2rem;
+}
+
+.recipe-form-wrapper {
   width: 30rem;
   margin: 0 auto;
   background-color: #d8d8d8;
@@ -313,21 +319,6 @@ button:hover {
   gap: 10px;
 }
 
-.recipe-header {
+.button_action a {
   margin-left: 2rem;
-}
-
-/* CSS for responsive layout */
-@media (max-width: 767px) {
-  .grid-container {
-    grid-template-columns: auto;
-  }
-}
-
-/* Print styles */
-
-@media print {
-  .container {
-    width: 100%;
-  }
 }
