--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -73,14 +73,11 @@ body {
 
 .container {
   width: 30rem;
-  margin: 0 auto;
+  height: 60vh;
+  margin: 2rem auto;
   background-color: #d8d8d8;
   border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   text-align: center;
-  align-items: center;
   gap: 10px;
 }
 
@@ -144,6 +141,8 @@ button:hover {
   grid-gap: 10px;
   padding: 20px;
   background-color: #f1f1f1;
+  width: 50%;
+  margin: 0 auto;
 }
 
 .grid-item {
@@ -161,7 +160,7 @@ button:hover {
 .new_food {
   border: 2px solid #e6e6e6;
   background: #f1f1f1;
-  margin: 0 auto;
+  margin-left: 43rem;
 }
 
 .last {
@@ -173,15 +172,18 @@ button:hover {
 
 .edit_btn,
 .delete_btn {
-  width: 60%;
+  padding: 0 10px;
   background-color: #55e1fd;
   color: black;
   font-weight: 600;
-  padding: 0;
   height: 2rem;
   margin: 0;
 
   /* display: block; */
+}
+
+h1 {
+  text-align: center;
 }
 
 .delete_btn {
@@ -196,15 +198,13 @@ button:hover {
 
 .a {
   border: 2px solid;
-  margin: 30px 0;
+  margin: 30px auto;
+  width: 70%;
   display: flex;
   padding: 10px;
+  justify-content: space-between;
 }
 
-.a p {
-  font-weight: 600;
-  font-size: 1.4rem;
-}
 
 .recipe-details {
   display: flex;
@@ -272,8 +272,26 @@ button:hover {
   text-align: center;
 }
 
+.even-row {
+  background-color: #e6e5e5; /* Set the background color for even rows */
+}
+
+.odd-row {
+  background-color: #ffffff; /* Set the background color for odd rows */
+}
+
+
+.content:nth-child(even) {
+  display: flex;
+
+  background-color: #ebe8e8;
+  padding: 10px;
+  text-align: center;
+}
+
 .shopping_list {
-  margin: 2rem 10rem;
+  margin: 2rem auto;
+  width: 50%;
 }
 
 .shopping_list_text {
