--- a/app/views/food_recipes/index.html.erb
+++ b/app/views/food_recipes/index.html.erb
@@ -7,16 +7,18 @@
 <p>Total Vaue of Food Needed: $<%= @food_cost%></p>
 </div>
 <div class="grid-container3">
-    <div class="grid-item3"><strong>Food</strong></div>
-    <div class="grid-item3"><strong>Unit Price</strong></div>
-    <div class="grid-item3"><strong>Quantity</strong></div>
-    <% if @foods.empty?%>
-    <% else %>
-    <% @foods.each do |food| %>
-    <div class="grid-item3"><%= food.name%></div>
-    <div class="grid-item3">$<%= food.price%></div>
-    <div class="grid-item3"><%= food.quantity%><%=food.measurement_unit%></div>
+  <div class="grid-item3"><strong>Food</strong></div>
+  <div class="grid-item3"><strong>Unit Price</strong></div>
+  <div class="grid-item3"><strong>Quantity</strong></div>
+  <% if @foods.empty? %>
+  <% else %>
+    <% @foods.each_with_index do |food, index| %>
+      <% row_class = index.even? ? 'even-row' : 'odd-row' %>
+      <div class="grid-item3 <%= row_class %>"><%= food.name %></div>
+      <div class="grid-item3 <%= row_class %>">$<%= food.price %></div>
+      <div class="grid-item3 <%= row_class %>"><%= food.quantity %><%= food.measurement_unit %></div>
     <% end %>
-    <% end %>
-  </div>
+  <% end %>
+</div>
+
 </section>
