--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -18,7 +18,7 @@
 
 <div class="second_table_recipes">
   <div class="button_action">
-  <%= button_to "Generate Shopping List", general_shopping_list_path, method: :get%>
+  <%= button_to "Generate Shopping List", general_shopping_list_path, method: :get, class: 'button'%>
  <%= button_to "Add Ingredient", new_food_recipe_path, method: :get, class: "button" %>
 
   </div>
@@ -30,11 +30,12 @@
     <div class="grid-item2"><strong>Actions</strong></div>
     <% if @foods.empty?%>
     <% else %>
-    <% @foods.each do |food| %>
-    <div class="grid-item2"><%= food.name%></div>
-    <div class="grid-item2">$<%= food.price%></div>
-    <div class="grid-item2"><%= food.quantity%><%=food.measurement_unit%></div>
-    <div class="grid-item2 last"><%= button_to "Edit", edit_food_path(food.id), method: :get, class: 'edit_btn' %>|<%= button_to "Delete", food_path(food.id), method: :delete, class: 'delete_btn' %></div>
+    <% @foods.each_with_index do |food, index| %>
+    <% row_class = index.even? ? 'even-row' : 'odd-row' %>
+    <div class="grid-item2 <%= row_class %>"><%= food.name%></div>
+    <div class="grid-item2 <%= row_class %>">$<%= food.price%></div>
+    <div class="grid-item2 <%= row_class %>"><%= food.quantity%><%=food.measurement_unit%></div>
+    <div class="grid-item2 last <%= row_class %>"><%= button_to "Edit", edit_food_path(food.id), method: :get, class: 'edit_btn' %>|<%= button_to "Delete", food_path(food.id), method: :delete, class: 'delete_btn' %></div>
     <% end %>
     <% end %>
   </div>
