--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,9 @@
    <nav>
     <ul>
       <li><%= link_to "Food", foods_path %></li>
-      <li><a href="recipes">Recipe</a></li>
-      <li><a href="public_recipes">Public Recipe</a></li>
-      <li><a href="general_shopping_list">Shopping List</a></li>
+      <li><%=link_to "Recipes", recipes_path %></li>
+      <li><%=link_to "Public Recipes", public_recipes_path %></li>
+      <li><%=link_to "Shopping List", general_shopping_list_path %></li>
     </ul>
   </nav>
   <p class="notice"><%= notice %></p>
